[package]
name = "picomd"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A tiny, offline, GitHub-fidelity Markdown previewer (no editor)."
repository = "https://github.com/jondot/picomd"
homepage = "https://github.com/jondot/picomd"
documentation = "https://github.com/jondot/picomd#readme"
readme = "README.md"
keywords = ["markdown", "preview", "github", "katex", "mermaid"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
ammonia = "4"
comrak = "0.52"
notify-debouncer-mini = "0.7"
serde_json = "1"
tao = "0.35"
wry = "0.55"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
